<resources>
    <string name="app_name">drawr</string>
    <string name="version">Version</string>
    <string name="session_id">Session ID</string>
    <string name="new_session_title">New Session</string>
    <string name="leaving_session_confirmation_title">Leaving Session</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="new_session_question">Do you want the Session to be online or offline?</string>
    <string name="leave_session_confimation">Do you really want to leave this session?</string>
    <string name="try_again">Please try again…</string>
    <string name="canvas">Canvas</string>
    <string name="preferences">Preferences</string>
    <string name="share">Share</string>
    <string name="quit">Quit</string>
    <string name="wrong_credentials">Please enter a username and configure the Host</string>
    <string name="wrong_session_or_timeout">Invalid SessionID oder Host timed out!</string>
    <string name="offline_session_id">You are in an offline Session</string>
    <string name="server_shutdown">The server shut down!</string>

    <string name="joining_session">Joining Session…</string>
    <string name="joining_session_success">Joining session successful!</string>
    <string name="joining_session_failed">Joining session failed!</string>
    <string name="creating_session_success">Creating session successful!</string>
    <string name="creating_session_failed">Creating session failed!</string>

    <string name="general_settings">General Settings</string>
    <string name="username">Username</string>
    <string name="username_summary">Please provide a username…</string>
    <string name="host">Host</string>
    <string name="host_summary">The Host URL</string>
    <string name="port">Port</string>
    <string name="port_summary">Default is 3000</string>
    <string name="test_connection">Test Connection</string>

    <string name="connection_successful">Connection successful!</string>
    <string name="connection_failed">Connection failed!</string>

    <string name="small">small</string>
    <string name="normal">normal</string>
    <string name="large">large</string>
    <string name="huge">huge</string>

    <string name="pen">Pen</string>
    <string name="eraser">Eraser</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="clear_canvas">Clear Canvas</string>
    <string name="exit_fullscreen">Exit Fullscreen</string>

    <string name="undo">Undo</string>
    <array name="nav_drawer_list_array">
        <item>@string/canvas</item>
        <item>@string/share</item>
        <item>@string/quit</item>
    </array>
    <array name="canvas_pen_tools">
        <item>@string/pen</item>
        <item>@string/eraser</item>
    </array>

    <string name="dialog_title_tools">Tools</string>
    <string name="dialog_title_color">Color</string>
    <string name="dialog_title_stroke">Stroke</string>
</resources>
